BB-1295 - removed scopes
